// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render with true 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(Player)
    playerInfo={
      Object {
        "artistName": "artistName",
        "index": 1,
        "isPlaying": true,
        "next": 2,
        "playlist": Array [
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
        ],
        "previous": 0,
        "trackId": "trackId",
        "trackLink": "previewUrl",
        "trackName": "trackName",
      }
    }
    track={
      Object {
        "favorites": Array [],
        "songs": Array [
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "appBar": "Player-appBar-1",
        "controls": "Player-controls-5",
        "songInfo": "Player-songInfo-3",
        "title": "Player-title-2",
        "toolbar": "Player-toolbar-4",
      },
      "playerInfo": Object {
        "artistName": "artistName",
        "index": 1,
        "isPlaying": true,
        "next": 2,
        "playlist": Array [
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
        ],
        "previous": 0,
        "trackId": "trackId",
        "trackLink": "previewUrl",
        "trackName": "trackName",
      },
      "track": Object {
        "favorites": Array [],
        "songs": Array [
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
        ],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "appBar": "Player-appBar-1",
          "controls": "Player-controls-5",
          "songInfo": "Player-songInfo-3",
          "title": "Player-title-2",
          "toolbar": "Player-toolbar-4",
        },
        "playerInfo": Object {
          "artistName": "artistName",
          "index": 1,
          "isPlaying": true,
          "next": 2,
          "playlist": Array [
            Object {
              "artistName": "artistName",
              "artistViewUrl": "artistViewUrl",
              "artworkUrl": "artworkUrl100",
              "collectionName": "collectionName",
              "isFavorite": false,
              "previewUrl": "previewUrl",
              "trackId": "trackId",
              "trackName": "trackName",
              "trackPrice": "trackPrice",
            },
            Object {
              "artistName": "artistName",
              "artistViewUrl": "artistViewUrl",
              "artworkUrl": "artworkUrl100",
              "collectionName": "collectionName",
              "isFavorite": false,
              "previewUrl": "previewUrl",
              "trackId": "trackId",
              "trackName": "trackName",
              "trackPrice": "trackPrice",
            },
          ],
          "previous": 0,
          "trackId": "trackId",
          "trackLink": "previewUrl",
          "trackName": "trackName",
        },
        "track": Object {
          "favorites": Array [],
          "songs": Array [
            Object {
              "artistName": "artistName",
              "artistViewUrl": "artistViewUrl",
              "artworkUrl": "artworkUrl100",
              "collectionName": "collectionName",
              "isFavorite": false,
              "previewUrl": "previewUrl",
              "trackId": "trackId",
              "trackName": "trackName",
              "trackPrice": "trackPrice",
            },
          ],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;

exports[`renders without crashing 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <WithStyles(Player)
    playerInfo={
      Object {
        "artistName": "artistName",
        "index": 1,
        "isPlaying": false,
        "next": 2,
        "playlist": Array [
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
        ],
        "previous": 0,
        "trackId": "trackId",
        "trackLink": "previewUrl",
        "trackName": "trackName",
      }
    }
    track={
      Object {
        "favorites": Array [],
        "songs": Array [
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
        ],
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "appBar": "Player-appBar-1",
        "controls": "Player-controls-5",
        "songInfo": "Player-songInfo-3",
        "title": "Player-title-2",
        "toolbar": "Player-toolbar-4",
      },
      "playerInfo": Object {
        "artistName": "artistName",
        "index": 1,
        "isPlaying": false,
        "next": 2,
        "playlist": Array [
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
        ],
        "previous": 0,
        "trackId": "trackId",
        "trackLink": "previewUrl",
        "trackName": "trackName",
      },
      "track": Object {
        "favorites": Array [],
        "songs": Array [
          Object {
            "artistName": "artistName",
            "artistViewUrl": "artistViewUrl",
            "artworkUrl": "artworkUrl100",
            "collectionName": "collectionName",
            "isFavorite": false,
            "previewUrl": "previewUrl",
            "trackId": "trackId",
            "trackName": "trackName",
            "trackPrice": "trackPrice",
          },
        ],
      },
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "appBar": "Player-appBar-1",
          "controls": "Player-controls-5",
          "songInfo": "Player-songInfo-3",
          "title": "Player-title-2",
          "toolbar": "Player-toolbar-4",
        },
        "playerInfo": Object {
          "artistName": "artistName",
          "index": 1,
          "isPlaying": false,
          "next": 2,
          "playlist": Array [
            Object {
              "artistName": "artistName",
              "artistViewUrl": "artistViewUrl",
              "artworkUrl": "artworkUrl100",
              "collectionName": "collectionName",
              "isFavorite": false,
              "previewUrl": "previewUrl",
              "trackId": "trackId",
              "trackName": "trackName",
              "trackPrice": "trackPrice",
            },
            Object {
              "artistName": "artistName",
              "artistViewUrl": "artistViewUrl",
              "artworkUrl": "artworkUrl100",
              "collectionName": "collectionName",
              "isFavorite": false,
              "previewUrl": "previewUrl",
              "trackId": "trackId",
              "trackName": "trackName",
              "trackPrice": "trackPrice",
            },
          ],
          "previous": 0,
          "trackId": "trackId",
          "trackLink": "previewUrl",
          "trackName": "trackName",
        },
        "track": Object {
          "favorites": Array [],
          "songs": Array [
            Object {
              "artistName": "artistName",
              "artistViewUrl": "artistViewUrl",
              "artworkUrl": "artworkUrl100",
              "collectionName": "collectionName",
              "isFavorite": false,
              "previewUrl": "previewUrl",
              "trackId": "trackId",
              "trackName": "trackName",
              "trackPrice": "trackPrice",
            },
          ],
        },
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": Object {
            "hasShouldComponentUpdateBug": false,
          },
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
  Symbol(enzyme.__childContext__): null,
}
`;
